--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -71,10 +71,7 @@ process = [
 ]
 # Includes basic task execution capabilities
 rt = []
-rt-multi-thread = [
-  "num_cpus",
-  "rt",
-]
+rt-multi-thread = ["num_cpus", "rt"]
 signal = [
   "libc",
   "mio/os-poll",
@@ -95,17 +92,23 @@ pin-project-lite = "0.2.11"
 
 # Everything else is optional...
 bytes = { version = "1.0.0", optional = true }
-mio = { version = "0.8.9", optional = true, default-features = false }
+# mio = { version = "0.8.9", optional = true, default-features = false }
+mio = { version = "0.8.9", optional = true, default-features = false, git = "https://github.com/second-state/wasi_mio.git", branch = "v0.8.x" }
 num_cpus = { version = "1.8.0", optional = true }
 parking_lot = { version = "0.12.0", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-socket2 = { version = "0.5.5", optional = true, features = [ "all" ] }
+# socket2 = { version = "0.5.5", optional = true, features = ["all"] }
+socket2 = { version = "0.5.5", optional = true, features = [
+  "all",
+], git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
 
 # Currently unstable. The API exposed by these features may be broken at any time.
 # Requires `--cfg tokio_unstable` to enable.
 [target.'cfg(tokio_unstable)'.dependencies]
-tracing = { version = "0.1.25", default-features = false, features = ["std"], optional = true } # Not in full
+tracing = { version = "0.1.25", default-features = false, features = [
+  "std",
+], optional = true } # Not in full
 
 # Currently unstable. The API exposed by these features may be broken at any time.
 # Requires `--cfg tokio_unstable` to enable.
@@ -118,7 +121,10 @@ signal-hook-registry = { version = "1.1.1", optional = true }
 
 [target.'cfg(unix)'.dev-dependencies]
 libc = { version = "0.2.149" }
-nix = { version = "0.27.1", default-features = false, features = ["fs", "socket"] }
+nix = { version = "0.27.1", default-features = false, features = [
+  "fs",
+  "socket",
+] }
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.48"
@@ -126,10 +132,14 @@ optional = true
 
 [target.'cfg(windows)'.dev-dependencies.windows-sys]
 version = "0.48"
-features = [
-    "Win32_Foundation",
-    "Win32_Security_Authorization",
-]
+features = ["Win32_Foundation", "Win32_Security_Authorization"]
+
+[target.'cfg(all(target_os = "wasi", tokio_unstable))'.dependencies]
+libc = { version = "0.2.149", optional = true }
+wasmedge_wasi_socket = "0.5"
+socket2 = { version = "0.5.5", optional = true, features = [
+  "all",
+], git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
 
 [dev-dependencies]
 tokio-test = { version = "0.4.0", path = "../tokio-test" }
@@ -139,7 +149,8 @@ mockall = "0.11.1"
 async-stream = "0.3"
 
 [target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
-socket2 = "0.5.5"
+# socket2 = "0.5.5"
+socket2 = { version = "0.5.5", git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
 tempfile = "3.1.0"
 
 [target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
@@ -157,7 +168,14 @@ loom = { version = "0.7", features = ["futures", "checkpoint"] }
 [package.metadata.docs.rs]
 all-features = true
 # enable unstable features in the documentation
-rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable", "--cfg", "tokio_taskdump"]
+rustdoc-args = [
+  "--cfg",
+  "docsrs",
+  "--cfg",
+  "tokio_unstable",
+  "--cfg",
+  "tokio_taskdump",
+]
 # it's necessary to _also_ pass `--cfg tokio_unstable` and `--cfg tokio_taskdump`
 # to rustc, or else dependencies will not be enabled, and the docs build will fail.
 rustc-args = ["--cfg", "tokio_unstable", "--cfg", "tokio_taskdump"]
@@ -169,8 +187,8 @@ features = ["full", "test-util"]
 # The following are types that are allowed to be exposed in Tokio's public API.
 # The standard library is allowed by default.
 allowed_external_types = [
-   "bytes::buf::buf_impl::Buf",
-   "bytes::buf::buf_mut::BufMut",
+  "bytes::buf::buf_impl::Buf",
+  "bytes::buf::buf_mut::BufMut",
 
-   "tokio_macros::*",
+  "tokio_macros::*",
 ]
