--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -96,12 +96,14 @@ mio = { version = "1.0.1", optional = true, default-features = false }
 parking_lot = { version = "0.12.0", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-socket2 = { version = "0.5.5", optional = true, features = [ "all" ] }
+socket2 = { version = "0.5.5", optional = true, features = ["all"] }
 
 # Currently unstable. The API exposed by these features may be broken at any time.
 # Requires `--cfg tokio_unstable` to enable.
 [target.'cfg(tokio_unstable)'.dependencies]
-tracing = { version = "0.1.25", default-features = false, features = ["std"], optional = true } # Not in full
+tracing = { version = "0.1.25", default-features = false, features = [
+  "std",
+], optional = true } # Not in full
 
 # Currently unstable. The API exposed by these features may be broken at any time.
 # Requires `--cfg tokio_unstable` to enable.
@@ -114,7 +116,11 @@ signal-hook-registry = { version = "1.1.1", optional = true }
 
 [target.'cfg(unix)'.dev-dependencies]
 libc = { version = "0.2.149" }
-nix = { version = "0.29.0", default-features = false, features = ["aio", "fs", "socket"] }
+nix = { version = "0.29.0", default-features = false, features = [
+  "aio",
+  "fs",
+  "socket",
+] }
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.52"
@@ -122,10 +128,12 @@ optional = true
 
 [target.'cfg(windows)'.dev-dependencies.windows-sys]
 version = "0.52"
-features = [
-    "Win32_Foundation",
-    "Win32_Security_Authorization",
-]
+features = ["Win32_Foundation", "Win32_Security_Authorization"]
+
+[target.'cfg(all(target_os = "wasi", tokio_unstable))'.dependencies]
+libc = { version = "0.2.149", optional = true }
+wasmedge_wasi_socket = "0.5"
+socket2 = { version = "0.5.5", optional = true, features = ["all"] }
 
 [dev-dependencies]
 tokio-test = { version = "0.4.0", path = "../tokio-test" }
@@ -153,7 +161,14 @@ loom = { version = "0.7", features = ["futures", "checkpoint"] }
 [package.metadata.docs.rs]
 all-features = true
 # enable unstable features in the documentation
-rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable", "--cfg", "tokio_taskdump"]
+rustdoc-args = [
+  "--cfg",
+  "docsrs",
+  "--cfg",
+  "tokio_unstable",
+  "--cfg",
+  "tokio_taskdump",
+]
 # it's necessary to _also_ pass `--cfg tokio_unstable` and `--cfg tokio_taskdump`
 # to rustc, or else dependencies will not be enabled, and the docs build will fail.
 rustc-args = ["--cfg", "tokio_unstable", "--cfg", "tokio_taskdump"]
@@ -165,8 +180,8 @@ features = ["full", "test-util"]
 # The following are types that are allowed to be exposed in Tokio's public API.
 # The standard library is allowed by default.
 allowed_external_types = [
-   "bytes::buf::buf_impl::Buf",
-   "bytes::buf::buf_mut::BufMut",
+  "bytes::buf::buf_impl::Buf",
+  "bytes::buf::buf_mut::BufMut",
 
-   "tokio_macros::*",
+  "tokio_macros::*",
 ]
